[package]
name = "proxies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
base64 = "0.22.0"
cidr = "0.2.2"
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
clap = { version = "4.5.9", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
url = "2.5.2"
