[package]
name = "proxies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
base64 = "0.22.1"
cidr = "0.2.3"
env_logger = "0.11.3"
log = "0.4.22"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
clap = { version = "4.5.9", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
url = "2.5.2"
